--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@
 # pre-commit run --files R/*
 # pre-commit run --all-files
 # pre-commit uninstall
-# exclude: '^(notebooks|scripts)/.*'
+exclude: ^(notebooks/|scripts/|tests/conftest\.py$)
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v6.0.0
@@ -26,7 +26,7 @@ repos:
           # Security
   - id: detect-private-key
 
-    # File validation
+          # File validation
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
   rev: v2.15.0
   hooks:
@@ -37,21 +37,21 @@ repos:
     args: [--autofix, --indent, '2']
     exclude: ^\.github/dependabot\.yml$
 
-    # Code Quality
+          # Code Quality
 - repo: https://github.com/astral-sh/uv-pre-commit
-  rev: 0.8.23
+  rev: 0.9.15
   hooks:
   - id: uv-lock
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.13.3
+  rev: v0.14.7
   hooks:
   - id: ruff
     args: [--fix, --exit-non-zero-on-fix, --show-fixes]
   - id: ruff-format
 
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.18.2
+  rev: v1.19.0
   hooks:
   - id: mypy
     args: [--ignore-missing-imports]
@@ -61,9 +61,9 @@ repos:
   hooks:
   - id: detect-secrets
 
-# Notebook Quality
+        # Notebook Quality
 - repo: https://github.com/nbQA-dev/nbQA
-  rev: 1.8.7
+  rev: 1.9.1
   hooks:
   - id: nbqa-ruff
     args: [--fix, --exit-non-zero-on-fix]
@@ -75,14 +75,12 @@ repos:
     additional_dependencies: [mypy==1.18.2]
 
 - repo: https://github.com/kynan/nbstripout
-  rev: 0.7.1
+  rev: 0.8.2
   hooks:
   - id: nbstripout
-
 # Docker
-- repo: https://github.com/hadolint/hadolint
-  rev: v2.13.1-beta
-  hooks:
-  - id: hadolint-docker
-    args: [--ignore, DL3008, --ignore, DL3015]
-
+# - repo: https://github.com/hadolint/hadolint
+# rev: v2.14.0
+# hooks:
+# - id: hadolint-docker
+#   args: [--ignore, DL3008, --ignore, DL3015]
